test(Result): 자료구조 수정에 따른 테스트 코드 수정